# DevOps_Repository_Sync

./: .gitignore  Cargo.toml  README.md  config.toml  config_example.toml
src/: main.rs
