[package]
name = "DevOps_Repository_Sync"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
simplelog = "0.12.2"
tokio = { version = "1.39.3", features = ["full"] }
toml = "0.8.19"
